--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <div>
       <ul>
         <li>bricks</li>
-        <li>more quickcreate</li>
+        <li>more</li>
         <li>more mortar</li>
         <li>sand</li>
       </ul>
