--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <li>bricks</li>
         <li>more new thing</li>
         <li>more quickcreate</li>
-        <li>more mortar</li>
+      </ul>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
       </ul>
     </div>
   </body>
