Added the footer

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <li>Item 3</li>
       </ul>
     </div>
+    <div class="footer">
+      <p>Testing some things out.</p>
+      <p>Another line of code.</p>
+    </footer>
   </body>
 </html>
